--- a/Rocket/style.css
+++ b/Rocket/style.css
@@ -26,9 +26,16 @@ section{
 header h1{
     margin-bottom: 4px;
     font-size: 28px;
+    line-height: 33px;
 }
 header h1 span{
     color: #995000;
+}
+header p{
+    color: rgba(0, 0,0, 0.7);
+    line-height: 16px;
+    font-size: 14px;
+    
 }
 
 
@@ -60,11 +67,16 @@ li .details{
 .details h3{
     margin-bottom: 8px;
     font-size: 16px;
+    line-height: 19px;
+
     
 }
 
 .details p {
     color:rgba(0, 0,0, 0.6);
+    font-size: 14px;
+    line-height: 21px;
+
 
 }
 
